--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
+        "overtrue/laravel-lang": "^3.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
